fix: align footer edge and reduce farewell text

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ body {
 .t396__artboard {
     position: relative;
     width: 1200px;
-    height: 7050px;
+    height: 7049px;
     margin: 0 auto;
     overflow: hidden;
     transform-origin: top center;
@@ -409,7 +409,7 @@ body {
 @media screen and (max-width: 1199px) {
     .t396__artboard {
         width: 100%;
-        height: 5620px;
+        height: 5575px;
     }
 
     .t396__artboard::before {
@@ -418,7 +418,7 @@ body {
 
     #rec718911148 .t396__carrier,
     #rec718911148 .t396__filter {
-        height: 5620px;
+        height: 5575px;
     }
 
     #rec718911148 .tn-elem[data-elem-id="1709672099725"] .tn-atom {
